# quantenergx

./: .editorconfig  .flake8  .gitignore  .gitignore.prod  .pre-commit-config.yaml  .prettierignore  .prettierrc  .snyk  .trigger-ci  AI_ANALYTICS_IMPLEMENTATION.md  CONTRIBUTING.md  DEPENDENCY_UPGRADE_NOTES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUANTUM.md  DEPLOYMENT_SUMMARY.md  DERIVATIVES_IMPLEMENTATION.md  FOUNDATION_SUMMARY.md  LICENSE  MOBILE_DEPLOYMENT_GUIDE.md  Makefile  QUANTUM_IMPLEMENTATION.md  README.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  SECURITY_TOOLING.md  SETUP_GUIDE.md  TECH_DEBT_ROADMAP.md  TESTING.md  WAF_CONFIGURATION.md  audit-ci.json  deployment-verification-report.json  docker-compose.kafka.yml  docker-compose.prod.yml  docker-compose.regional.yml  docker-compose.yml  gremlin-chaos.js  k6 load.js  nx.json  package-lock.json  (+11 more)
backend/: .env.example  .eslintrc.js  .eslintrc.json  .eslintrc.security.js  .eslintrc.security.json  .gitignore  DEPENDENCY_UPGRADE_NOTES.md  Dockerfile  Dockerfile.cbb-validator  Dockerfile.etl  Dockerfile.prod  README.md  adnoc.js  check-backend-port.js  complete-verification.js  demo-analytics-workflow.js  eslint.config.js  jest.config.js  lint_results.txt  main.py  nodemon.json  package-lock.json  package.json  project.json  pyproject.toml  pytest.ini  requirements.txt  sentry.js  sharia.js  stryker-demo.conf.js  stryker.conf.js  test-basic-functionality.js  test_integration.py  tsconfig.json  validate-ai-analytics.js
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  analytics.py  device.py  iot.py  market.py  market_data.py  trading.py  user.py
backend/app/routers/: __init__.py  analytics.py  audit.py  auth.py  extensibility.py  iot.py  iot_telemetry.py  localization.py  market_data.py  notifications.py  security.py  trading.py  user_roles.py
backend/app/schemas/: analytics.py  device.py  market.py  user.py
backend/app/services/: __init__.py  analytics_pipeline.py  analytics_service.py  auth_service.py  compliance.py  extensibility_service.py  iot_service.py  localization_service.py  market_data_service.py  pricing_models.py  risk_management.py  security_service.py  trading_service.py
backend/app/tests/: __init__.py  conftest.py  test_auth_service.py  test_localization_service.py  test_main.py
backend/docs/: EXCHANGE_CONNECTORS.md  advanced-energy-trading-modules.md
backend/docs/services/: cftc-compliance-service.md  liza-trading-service.md
backend/etl/: oilPricesETL.js
backend/src/: app.js  config.py  index.ts  main.py  server.js  server.ts
backend/src/__tests__/: smoke.test.ts
backend/src/database/: __init__.py  client.py  setup_rls.sql
backend/src/examples/: regional-dominance-integration.ts
backend/src/kafka/: kafkaService.ts
backend/src/middleware/: auth.js  quantumAuth.js  security.ts
backend/src/plugins/: enhancedPluginManager.ts  pluginManager.ts
backend/src/routes/: __init__.py  advanced.js  ai.js  analytics.js  carbon.js  compliance.js  derivatives.js  documents.js  energy.py  esg.js  exchanges.js  index.js  integration.js  iot.js  margin.js  market.js  market.py  marketplace.js  notifications.js  ocr.js  quantum.js  regulatory.js  renewable-certificates.js  risk.js  settlement.js  sharia.js  trading.js  users.js
backend/src/services/: anomalyDetectionService.js  automatedSettlementService.js  baseExchangeConnector.js  carbonTrackingService.js  cbb-validator.ts  cloudCostManagementService.js  complianceService.js  dataGovernanceService.js  derivativesService.js  (+31 more)
backend/test/: exchanges.test.js  ocr.test.js  security.test.ts  setup.js
backend/tests/: __init__.py  ai.test.js  backend.test.js  conftest.py  test_auth.py  test_energy_routes.py  test_main.py  test_market_data.py  test_market_routes.py
(+411 files in other folders)
